# WeatherReminder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
DjangoWeatherReminder/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_city_customuser_native_city.py  0003_alter_city_city_name.py  0004_alter_city_options.py
weather/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
weather/management/commands/: load_data.py
weather/migrations/: 0001_initial.py  0002_alter_subscription_subscription_date.py  0003_alter_subscription_subscription_date.py
